--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -44,8 +44,7 @@
 						styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
 				<br />
-				<p:button value="#{message['button.novo']}"
-					outcome="pretty:equipe-incluir" />
+				<p:button styleClass="btn-default" value="#{message['button.novo']}"	outcome="pretty:equipe-incluir" />
 			</h:form>
 		</div>
 	</ui:define>
