--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -42,7 +42,7 @@
 					<p:commandButton value="#{message['button.nao']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
 				<br />
-				<p:button value="#{message['button.novo']}" outcome="pretty:formaContratacao-incluir" />
+				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:formaContratacao-incluir" />
 			</h:form>
 		</div>
 	</ui:define>
