--- a/src/main/webapp/pages/perfil/perfil-listar.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-listar.xhtml
@@ -43,8 +43,7 @@
 						styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 				</p:confirmDialog>
 				<br />
-				<p:button value="#{message['button.novo']}"
-					outcome="pretty:perfil-incluir" />
+				<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:perfil-incluir" />
 			</h:form>
 		</div>
 	</ui:define>
