--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -105,7 +105,7 @@
 				<p:commandButton value="#{message['button.nao']}" type="button" styleClass="ui-confirmdialog-no" icon="ui-icon-close" />
 			</p:confirmDialog>
 			<br />
-			<p:button value="#{message['button.novo']}" outcome="pretty:profissional-incluir" />
+			<p:button styleClass="btn-default" value="#{message['button.novo']}" outcome="pretty:profissional-incluir" />
 		</h:form>
 		
 	</ui:define>
