--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -17,7 +17,10 @@
 				<p:outputLabel value="#{message['label.cargaHoraria']}" styleClass="label" for="cargaHoraria"/>
 				<p:inputMask id="cargaHoraria" value="#{cargaHorariaManager.cargaHoraria.cargaHoraria}" mask="99,99" converter="cargaHorariaConverter" required="true" requiredMessage="#{message['span.obrigatorio.cargaHoraria']}"/><br/><br/>
 				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
-        		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button"  required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/><br/><br/>
+        		<p:calendar id="button" value="#{cargaHorariaManager.cargaHoraria.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button"  required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/><br/><br/>
+        		<p:outputLabel for="buttonDataFim" value="#{message['label.data.final']}" styleClass="label" />
+        		<p:calendar id="buttonDataFim" value="#{cargaHorariaManager.cargaHoraria.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/><br /><br />
+        		
         		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.update()}" update="growl" />
         		<p:button value="#{message['button.cancelar']}" outcome="pretty:cargaHoraria"/>
 			</p:panel>
