--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -18,8 +18,11 @@
 				<p:inputText id="nome" value="#{cargoManager.cargo.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
 				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label" />
-				<p:calendar id="button" value="#{cargoManager.cargo.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>				
+				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>				
 				<br /><br />
+				<p:outputLabel for="buttonDataFim" value="#{message['label.data.final']}" styleClass="label" />
+        		<p:calendar id="buttonDataFim" value="#{cargoManager.cargo.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/><br /><br />
+        		
 				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.update()}" update="growl" />
 				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo"/>
 			</p:panel>
