--- a/src/main/webapp/pages/equipe/equipe-editar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-editar.xhtml
@@ -18,7 +18,10 @@
 	    		<p:inputText value="#{equipeManager.equipe.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/>
 	    		<br /><br />
 	    		<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
-	    		<p:calendar id="button" value="#{equipeManager.equipe.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+	    		<br /><br />
+	    		<p:outputLabel for="buttonFim" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
+	    		<p:calendar id="buttonFim" value="#{equipeManager.equipe.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button"  disabledWeekends="true"/>
 	    		<br /><br />
 	    	<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.update()}" update="growl" />
 	    	<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe"></p:button>
