--- a/src/main/webapp/pages/profissional/profissional-incluir.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-incluir.xhtml
@@ -15,7 +15,7 @@
 			<p:panel header="#{message['title.cargaHoraria.cadastro']}" id="painel">			
 				<p:focus context="painel"/>
 				<p:outputLabel for="celula" value="#{message['label.profissional.celula']}" styleClass="label" />
-				<p:selectOneMenu id="celula" value="#{profissionalManager.profissional.celula}" converter="simpleEntityConverter" required="true">
+				<p:selectOneMenu id="celula" value="#{profissionalManager.profissional.celula}" converter="simpleEntityConverter" required="true" requiredMessage="#{message['span.obrigatorio.celula']}">
 					<f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
 					<f:selectItems value="#{celulaManager.listarAtivos()}" var="celula" itemLabel="#{celula.nome}" itemValue="#{celula}"/>
 				</p:selectOneMenu>
@@ -39,37 +39,37 @@
         		<p:calendar id="demissao" value="#{profissionalManager.profissional.dataDemissao}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
         		<br/><br/>
 				<p:outputLabel for="equipe" value="#{message['label.profissional.equipe']}" styleClass="label" />
-				<p:selectOneMenu id="equipe" value="#{profissionalManager.profissional.equipe}" converter="simpleEntityConverter" required="true">
+				<p:selectOneMenu id="equipe" value="#{profissionalManager.profissional.equipe}" converter="simpleEntityConverter" required="true" requiredMessage="#{message['span.obrigatorio.equipe']}">
 					<f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
 					<f:selectItems value="#{equipeManager.listarAtivos()}" var="equipe" itemLabel="#{equipe.nome}" itemValue="#{equipe}"/>
 				</p:selectOneMenu>
 				<br/><br/>
 				  <p:outputLabel for="cargo" value="#{message['label.profissional.cargo']}" styleClass="label" />
-                <p:selectOneMenu id="cargo" value="#{profissionalManager.profissional.cargo}" converter="simpleEntityConverter" required="true">
+                <p:selectOneMenu id="cargo" value="#{profissionalManager.profissional.cargo}" converter="simpleEntityConverter" required="true" requiredMessage="#{message['span.obrigatorio.cargo']}">
                     <f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
                     <f:selectItems value="#{cargoManager.listarAtivos()}" var="cargo" itemLabel="#{cargo.nome}" itemValue="#{cargo}"/>
                 </p:selectOneMenu>
                 <br /><br />
                 <p:outputLabel for="perfil" value="#{message['label.profissional.perfil']}" styleClass="label" />
-                <p:selectOneMenu id="perfil" value="#{profissionalManager.profissional.perfil}" converter="simpleEntityConverter" required="true">
+                <p:selectOneMenu id="perfil" value="#{profissionalManager.profissional.perfil}" converter="simpleEntityConverter" required="true" requiredMessage="#{message['span.obrigatorio.perfil']}">
                     <f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
                     <f:selectItems value="#{perfilManager.listarAtivos()}" var="perfil" itemLabel="#{perfil.nome}" itemValue="#{perfil}"/>
                 </p:selectOneMenu>
                 <br /><br />
                 <p:outputLabel for="cargaH" value="#{message['label.cargaHoraria']}" styleClass="label" />
-                <p:selectOneMenu id="cargaH" value="#{profissionalManager.profissional.cargaHoraria}" converter="simpleEntityConverter" required="true">
+                <p:selectOneMenu id="cargaH" value="#{profissionalManager.profissional.cargaHoraria}" converter="simpleEntityConverter" required="true" requiredMessage="#{message['span.obrigatorio.cargaHoraria']}">
                     <f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
                     <f:selectItems value="#{cargaHorariaManager.listarAtivos()}" var="cargaHora" itemLabel="#{cargaHora.cargaHoraria}" itemValue="#{cargaHora}"/>
                 </p:selectOneMenu>
                 <br /><br />
                 <p:outputLabel for="fContratacao" value="#{message['label.profissional.formaContratacao']}" styleClass="label" />
-                <p:selectOneMenu id="fContratacao" value="#{profissionalManager.profissional.formaContratacao}" converter="simpleEntityConverter" required="true">
+                <p:selectOneMenu id="fContratacao" value="#{profissionalManager.profissional.formaContratacao}" converter="simpleEntityConverter" required="true" requiredMessage="#{message['span.obrigatorio.foramaContratacao']}">
                     <f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
                     <f:selectItems value="#{formaContratacaoManager.listarAtivos()}" var="fContratacao" itemLabel="#{fContratacao.nome}" itemValue="#{fContratacao}"/>
                 </p:selectOneMenu>
                 <br /><br />
                 <p:outputLabel for="status" value="#{message['label.profissional.status']}" styleClass="label" />
-                <p:selectOneMenu id="status" value="#{profissionalManager.profissional.status}"  required="true">
+                <p:selectOneMenu id="status" value="#{profissionalManager.profissional.status}"  required="true" requiredMessage="#{message['span.obrigatorio.status']}">
                    <f:converter converterId="simpleEntityConverter"/>
                     <f:selectItem itemLabel="#{message['select.selecione.opcao']}" noSelectionOption="true"/>
                     <f:selectItems value="#{statusManager.listarAtivos()}" var="status" itemLabel="#{status.nome}" itemValue="#{status}"/>
