--- a/src/main/webapp/pages/celula/celula-editar.xhtml
+++ b/src/main/webapp/pages/celula/celula-editar.xhtml
@@ -20,7 +20,7 @@
 				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label" />
 				<p:calendar id="button" value="#{celulaManager.celula.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>				
 				<br /><br />
-				<p:outputLabel for="buttonFim" value="#{message['label.data.inicio.nova']}" styleClass="label" />
+				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
 				<p:calendar id="buttonFim" value="#{celulaManager.celula.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>				
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{celulaManager.update()}" update="growl" />
