--- a/src/main/webapp/pages/equipe/equipe-editar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-editar.xhtml
@@ -20,7 +20,7 @@
 	    		<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
 	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
 	    		<br /><br />
-	    		<p:outputLabel for="buttonFim" value="#{message['label.data.inicio.nova']}" styleClass="label"/>
+	    		<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label"/>
 	    		<p:calendar id="buttonFim" value="#{equipeManager.equipe.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button"  disabledWeekends="true"/>
 	    		<br /><br />
 	    	<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.update()}" update="growl" />
