--- a/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
@@ -18,10 +18,10 @@
 				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
 				<p:inputText id="nome" value="#{formaContratacaoManager.formaContratacao.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
-				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
+				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label" />
 				<p:calendar id="button" value="#{formaContratacaoManager.formaContratacao.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
 				<br /><br />
-				<p:outputLabel for="buttonFim" value="#{message['label.data.inicio']}" styleClass="label" />
+				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
 				<p:calendar id="buttonFim" value="#{formaContratacaoManager.formaContratacao.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button"  disabledWeekends="true"/>
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{formaContratacaoManager.update()}" update="growl" />				
