--- a/src/main/webapp/pages/status/status-editar.xhtml
+++ b/src/main/webapp/pages/status/status-editar.xhtml
@@ -18,7 +18,10 @@
 				<p:inputText id="nome" value="#{statusManager.status.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
 				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
-				<p:calendar id="button" value="#{statusManager.status.dataManipulacao}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+				<p:calendar id="button" value="#{statusManager.status.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+				<br /><br />
+				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
+				<p:calendar id="buttonFim" value="#{statusManager.status.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
 				<br /><br />
 				<p:commandButton value="#{message['button.salvar']}" action="#{statusManager.update()}" update="growl" />				
 				<p:button  value="#{message['button.cancelar']}" outcome="pretty:status"/>				
