--- a/src/main/webapp/pages/equipe/equipe-listar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-listar.xhtml
@@ -29,12 +29,16 @@
 					<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
 						<pretty:link mappingId="equipe-editar">
 							<f:param value="#{equipe.id}" />
-							<p:commandButton styleClass="btn-acao" type="button" value="#{message['button.editar']}" />
+							<p:commandButton id="editar" styleClass="btn-acao" type="button" icon="ui-icon-pencil" />
 						</pretty:link>
-						<p:commandButton styleClass="btn-acao" value="#{message['button.desativar']}"	action="#{equipeManager.desativar(equipe.id)}" update="gridEquipes">
+						<p:commandButton id="desativar" styleClass="btn-acao" icon="ui-icon-closethick" action="#{equipeManager.desativar(equipe.id)}" update="gridEquipes">
 							<p:confirm header="Desativar Cargo"
 								message="Desaja mesmo Desativar?" icon="ui-icon-alert" />
 						</p:commandButton>
+						
+						<p:tooltip id="alt-editar" for="editar" value="Editar" styleClass="alt"/>
+						<p:tooltip id="alt-desativar" for="desativar" value="Desativar" styleClass="alt"/>
+						
 					</p:column>
 				</p:dataTable>
 				<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
