--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-listar.xhtml
@@ -31,20 +31,16 @@
 							<f:convertNumber minFractionDigits="2" type="currency" currencySymbol="R$"/>
 						</h:outputText>
 					</p:column>
-					
-					<!--  <p:column headerText="#{message['label.data.inicio']}">
-						<h:outputText value="#{perfilStefanini.registroValidadeInicio}">
-							<f:convertDateTime pattern="dd/MM/yyyy" locale="pt,BR"/>
-						</h:outputText>
-					</p:column> -->
 					<p:column headerText="#{message['label.acoes']}" styleClass="txtCenter">
 						<pretty:link mappingId="perfilStefanini-editar">
 							<f:param value="#{perfilStefanini.id}" />
-							<p:commandButton styleClass="btn-acao" type="button" value="#{message['button.editar']}" />
+							<p:commandButton id="editar" styleClass="btn-acao" type="button" icon="ui-icon-pencil" />
 						</pretty:link>
-						<p:commandButton styleClass="btn-acao" value="#{message['button.desativar']}" action="#{perfilStefaniniManager.desativar(perfilStefanini.id)}" update="gridPerfilStefanini" >
+						<p:commandButton id="desativar" styleClass="btn-acao" icon="ui-icon-closethick" action="#{perfilStefaniniManager.desativar(perfilStefanini.id)}" update="gridPerfilStefanini" >
 							<p:confirm header="#{message['button.desativar']}" message="#{message['questiona.desativar']}" icon="ui-icon-alert" />	
 						</p:commandButton>
+						<p:tooltip id="alt-editar" for="editar" value="Editar" styleClass="alt"/>
+						<p:tooltip id="alt-desativar" for="desativar" value="Desativar" styleClass="alt"/>
 					</p:column>
 				</p:dataTable>
 				<p:confirmDialog global="true" showEffect="fade" hideEffect="fade">
