--- a/src/main/webapp/pages/cargo/cargo-listar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-listar.xhtml
@@ -15,7 +15,7 @@
 			<h2>#{message['title.cargos']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<h:form>
-				<p:dataTable id="gridCargos" var="cargo" value="#{cargoManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
+				<p:dataTable id="gridCargos" var="cargo" value="#{cargoManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" >
 	
 					<p:column headerText="#{message['label.nome']}" sortBy="#{cargo.nome}">
 						<h:outputText value="#{cargo.nome}" />
