--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -10,11 +10,20 @@
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
 		    <p:menuitem value="Profissional" outcome="pretty:profissional" disabled="true"/>
-		</p:breadCrumb>
-		<h2>#{message['title.profissional']}</h2>
+		</p:breadCrumb>		
 		<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
+		
+		<h3>Buscas</h3>
+		<h:form>			
+			<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
+			<p:inputText id="nome" value="#{profissionalManager.profissional.nome}" />
+			<br />
+			<p:commandButton value="#{BUSCAR}-por lupinha" action="#{profissionalManager.buscarPorNome()}" update="growl" />
+		</h:form>
+		
+		<h2>#{message['title.profissional']}</h2>
 		<h:form>
-			<p:dataTable id="gridProfissional" var="profissional" value="#{profissionalManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" widgetVar="profiTable" filteredValue="#{profissionalManager.filtroprofissional}">
+			<p:dataTable id="gridProfissional" var="profissional" value="#{profissionalManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
 				
 				<p:column filterBy="#{profissional.nome}" filterMatchMode="contains" headerText="#{message['label.nome']} " >
 					<h:outputText value="#{profissional.nome}"/>
