--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -15,9 +15,9 @@
 			<h2>#{message['title.formaContratacao']}</h2>
 			<p:growl id="growl" life="4000" globalOnly="true" sticky="true" />
 			<h:form>
-				<p:dataTable id="gridFormaContratacao" var="formaContratacao" value="#{formaContratacaoManager.listarAtivos()}" emptyMessage="#{message['alerta.listaVazia']}" >
+				<p:dataTable id="gridFormaContratacao" var="formaContratacao" value="#{formaContratacaoManager.lista}" emptyMessage="#{message['alerta.listaVazia']}" >
 					
-					<p:column headerText="#{message['label.nome']}">
+					<p:column headerText="#{message['label.nome']}" sortBy="#{formaContratacao.nome}">
 						<h:outputText value="#{formaContratacao.nome}" />
 					</p:column>
 					
