--- a/src/main/webapp/pages/home/index.xhtml
+++ b/src/main/webapp/pages/home/index.xhtml
@@ -3,6 +3,17 @@
     template="/pages/template/default.xhtml">
 
     <ui:define name="content">
+    
+   	   <div id="profissionais" class="painel">
+        	<h:link outcome="pretty:profissional">
+        		<div class="img-painel">
+        			<h:graphicImage styleClass="img-relatorio" value="/resources/img/profissional.png" />
+        		</div>
+        		<div class="text-painel">
+        			Profissionais
+        		</div>
+       		</h:link>
+        </div>    	
         <div id="relatorio" class="painel">
         	<h:link outcome="pretty:relatorio">
         		<div class="img-painel">
