--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -5,9 +5,9 @@
 
     <ui:define name="content">
     	<p:breadCrumb>
-		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Cargo" outcome="pretty:cargaHoraria"/>
-		    <p:menuitem value="Cargo Editar" outcome="pretty:cargo-editar" disabled="true"/>
+		    <p:menuitem value="#{message['pao.home']}" url="#" />
+		    <p:menuitem value="#{message['pao.cargo']}" outcome="pretty:cargo"/>
+		    <p:menuitem value="#{message['pao.cargo.editar']}" outcome="pretty:cargo-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.cargos']}</h2>
         <h:form>
