--- a/src/main/webapp/pages/celula/celula-editar.xhtml
+++ b/src/main/webapp/pages/celula/celula-editar.xhtml
@@ -5,9 +5,9 @@
 
     <ui:define name="content">
     	<p:breadCrumb>
-		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Célula" outcome="pretty:celula"/>
-		    <p:menuitem value="Célula Editar" outcome="pretty:celula-editar" disabled="true"/>
+		    <p:menuitem value="#{message['pao.home']}" url="#" />
+		    <p:menuitem value="#{message['pao.celula']}" outcome="pretty:celula"/>
+		    <p:menuitem value="#{message['pao.celula.editar']}" outcome="pretty:celula-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.celulas']}</h2>
         <h:form>
