--- a/src/main/webapp/pages/equipe/equipe-incluir.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-incluir.xhtml
@@ -5,20 +5,21 @@
 
     <ui:define name="content">
     	<p:breadCrumb>
-		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Equipe" outcome="pretty:equipe"/>
-		    <p:menuitem value="Equipe Incluir" outcome="pretty:equipe-incluir" disabled="true"/>
+		    <p:menuitem value="#{message['pao.home']}" url="#" />
+		    <p:menuitem value="#{message['pao.equipe']}" outcome="pretty:equipe"/>
+		    <p:menuitem value="#{message['pao.equipe.incluir']}" outcome="pretty:equipe-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.equipes']}</h2>
     	<h:form>
 	    	<p:growl id="growl" life="4000" />
 	    	<p:panel header="#{message['title.equipe.cadastro']}" id="painel">	
 				<p:focus context="painel"/>		
-	    		<p:outputLabel value="#{message['label.nome']} *" styleClass="label"/>
-	    		<p:inputText value="#{equipeManager.equipe.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/><br /><br />
+	    		<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label"/>
+	    		<p:inputText id="nome" value="#{equipeManager.equipe.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}"/>
+	    		<br /><br />
 	    		<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
-	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/><br /><br/>
-	    	
+	    		<p:calendar id="button" value="#{equipeManager.equipe.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
+	    		<br /><br/>
 	    		<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.save()}" update="growl" />
 	    		<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe"></p:button>
 	    	</p:panel>
