--- a/src/main/webapp/pages/profissional/profissional-incluir.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-incluir.xhtml
@@ -5,9 +5,9 @@
 
     <ui:define name="content">
     	<p:breadCrumb>
-		    <p:menuitem value="Home" url="#" />
-		    <p:menuitem value="Profissional" outcome="pretty:profissional"/>
-		    <p:menuitem value="Profissional Incluir" outcome="pretty:profissional-incluir" disabled="true"/>
+		    <p:menuitem value="#{message['pao.home']}" url="#" />
+		    <p:menuitem value="#{message['pao.profissional']}" outcome="pretty:profissional"/>
+		    <p:menuitem value="#{message['pao.profissional.incluir']}" outcome="pretty:profissional-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.profissional']}</h2>
         <h:form>
