--- a/src/main/webapp/pages/formaContratacao/formaContratacao-incluir.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-incluir.xhtml
@@ -5,9 +5,9 @@
 
     <ui:define name="content">
     	<p:breadCrumb>
-		    <p:menuitem value="#{message.pao['pao.home']}" url="#" />
-		    <p:menuitem value="#{message.pao['pao.formaContratacao']}" outcome="pretty:formaContratacao"/>
-		    <p:menuitem value="#{message.pao['pao.formaContratacao.incluir']}" outcome="pretty:formaContratacao-incluir" disabled="true"/>
+		    <p:menuitem value="#{message['pao.home']}" url="#" />
+		    <p:menuitem value="#{message['pao.formaContratacao']}" outcome="pretty:formaContratacao"/>
+		    <p:menuitem value="#{message['pao.formaContratacao.incluir']}" outcome="pretty:formaContratacao-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.formaContratacao']}</h2>
         <h:form>
