--- a/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-listar.xhtml
@@ -9,7 +9,7 @@
 	<ui:define name="content">
        	<p:breadCrumb>
 		    <p:menuitem value="#{message['pao.home']}" url="#" />
-		    <p:menuitem value="#{message.pao['pao.formaContratacao']}" outcome="pretty:formaContratacao" disabled="true"/>
+		    <p:menuitem value="#{message['pao.formaContratacao']}" outcome="pretty:formaContratacao" disabled="true"/>
 		</p:breadCrumb>
 		<div class="panel-formulario">
 			<h2>#{message['title.formaContratacao']}</h2>
@@ -30,8 +30,8 @@
 							<p:confirm header="#{message['button.desativar']}" message="#{message['questiona.desativar']}" icon="ui-icon-alert" />	
 						</p:commandButton>
 						
-						<p:tooltip id="alt-editar" for="editar" value="#{message.label['label.editar']}" styleClass="alt"/>
-						<p:tooltip id="alt-desativar" for="desativar" value="#{message.label['label.desativar']}" styleClass="alt"/>
+						<p:tooltip id="alt-editar" for="editar" value="#{message['label.editar']}" styleClass="alt"/>
+						<p:tooltip id="alt-desativar" for="desativar" value="#{message['label.desativar']}" styleClass="alt"/>
 						
 					</p:column>
 				</p:dataTable>
