--- a/src/main/webapp/pages/perfil/perfil-incluir.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-incluir.xhtml
@@ -6,8 +6,8 @@
     <ui:define name="content">
     	<p:breadCrumb>
 		    <p:menuitem value="#{message['pao.home']}" url="#" />
-		    <p:menuitem value="#{message.pao['pao.perfil']}" outcome="pretty:perfil"/>
-		    <p:menuitem value="#{message.pao['pao.perfil.incluir']}" outcome="pretty:perfil-incluir" disabled="true"/>
+		    <p:menuitem value="#{message['pao.perfil']}" outcome="pretty:perfil"/>
+		    <p:menuitem value="#{message['pao.perfil.incluir']}" outcome="pretty:perfil-incluir" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.perfis']}</h2>
     	<h:form>
