--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
@@ -5,9 +5,9 @@
 
     <ui:define name="content">
     	<p:breadCrumb>
-		    <p:menuitem value="#{message.pao['pao.home']}" url="#" />
-		    <p:menuitem value="#{message.pao['pao.perfilStefanini']}" outcome="pretty:perfilStefanini"/>
-		    <p:menuitem value="#{message.pao['pao.perfilStefanini.editar']}" outcome="pretty:perfilStefanini-editar" disabled="true"/>
+		    <p:menuitem value="#{message['pao.home']}" url="#" />
+		    <p:menuitem value="#{message['pao.perfilStefanini']}" outcome="pretty:perfilStefanini"/>
+		    <p:menuitem value="#{message['pao.perfilStefanini.editar']}" outcome="pretty:perfilStefanini-editar" disabled="true"/>
 		</p:breadCrumb>
     	<h2>#{message['title.perfilStefanini']}</h2>
         <h:form>
