Mateus - Refatorado Busca

--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -45,7 +45,7 @@
 					<h:outputText value="#{profissional.cargo.nome}"/>			
 				</p:column>
 				
-				<p:column headerText="#{message['label.profissional.perfil']}" sortBy="#{proffissional.perfil.nome}">
+				<p:column headerText="#{message['label.profissional.perfil']}" sortBy="#{profissional.perfil.nome}">
 					<h:outputText value="#{profissional.perfil.nome}"/>	
 				</p:column>
 				
