--- a/src/main/webapp/pages/usuario/usuario-incluir.xhtml
+++ b/src/main/webapp/pages/usuario/usuario-incluir.xhtml
@@ -45,7 +45,7 @@
 				</p:selectOneMenu>
 				<br /><br />
 											
-				<p:commandButton value="Salvar" action="#{usuarioManager.save()}" update="growl" />
+				<p:commandButton value="Salvar" action="#{usuarioManager.save()}" update="growl" styleClass="btn"/>
 			</p:panel>
 		</h:form>
     </ui:define>
