--- a/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
+++ b/src/main/webapp/pages/cargaHoraria/cargaHoraria-editar.xhtml
@@ -21,8 +21,8 @@
         		<p:outputLabel for="buttonDataFim" value="#{message['label.data.final']}" styleClass="label" />
         		<p:calendar id="buttonDataFim" value="#{cargaHorariaManager.cargaHoraria.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/><br /><br />
         		
-        		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.update()}" update="growl" />
-        		<p:button value="#{message['button.cancelar']}" outcome="pretty:cargaHoraria"/>
+        		<p:commandButton value="#{message['button.salvar']}" action="#{cargaHorariaManager.update()}" update="growl" styleClass="btn"/>
+        		<p:button value="#{message['button.cancelar']}" outcome="pretty:cargaHoraria" styleClass="btn"/>
 			</p:panel>
 		</h:form>
     </ui:define>
