--- a/src/main/webapp/pages/cargo/cargo-editar.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-editar.xhtml
@@ -23,8 +23,8 @@
 				<p:outputLabel for="buttonDataFim" value="#{message['label.data.final']}" styleClass="label" />
         		<p:calendar id="buttonDataFim" value="#{cargoManager.cargo.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/><br /><br />
         		
-				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.update()}" update="growl" />
-				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo"/>
+				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.update()}" update="growl" styleClass="btn"/>
+				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo" styleClass="btn"/>
 			</p:panel>
 		</h:form>
     </ui:define>
