--- a/src/main/webapp/pages/cargo/cargo-incluir.xhtml
+++ b/src/main/webapp/pages/cargo/cargo-incluir.xhtml
@@ -20,8 +20,8 @@
 				<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
 				<p:calendar id="button" value="#{cargoManager.cargo.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>
 				<br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.save()}" update="growl" />				
-				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo"/>
+				<p:commandButton value="#{message['button.salvar']}" action="#{cargoManager.save()}" update="growl" styleClass="btn"/>				
+				<p:button  value="#{message['button.cancelar']}" outcome="pretty:cargo" styleClass="btn"/>
 				
 			</p:panel>
 		</h:form>
