--- a/src/main/webapp/pages/celula/celula-editar.xhtml
+++ b/src/main/webapp/pages/celula/celula-editar.xhtml
@@ -23,8 +23,8 @@
 				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
 				<p:calendar id="buttonFim" value="#{celulaManager.celula.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>				
 				<br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{celulaManager.update()}" update="growl" />
-				<p:button  value="#{message['button.cancelar']}" outcome="pretty:celula"/>
+				<p:commandButton value="#{message['button.salvar']}" action="#{celulaManager.update()}" update="growl" styleClass="btn"/>
+				<p:button  value="#{message['button.cancelar']}" outcome="pretty:celula" styleClass="btn"/>
 			</p:panel>
 		</h:form>
     </ui:define>
