--- a/src/main/webapp/pages/equipe/equipe-editar.xhtml
+++ b/src/main/webapp/pages/equipe/equipe-editar.xhtml
@@ -23,8 +23,8 @@
 	    		<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label"/>
 	    		<p:calendar id="buttonFim" value="#{equipeManager.equipe.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button"  disabledWeekends="true"/>
 	    		<br /><br />
-	    	<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.update()}" update="growl" />
-	    	<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe"></p:button>
+	    	<p:commandButton value="#{message['button.salvar']}" action="#{equipeManager.update()}" update="growl" styleClass="btn"/>
+	    	<p:button value="#{message['button.cancelar']}"  outcome="pretty:equipe" styleClass="btn"/>
 	    	</p:panel>
     	</h:form>
     
