--- a/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
+++ b/src/main/webapp/pages/formaContratacao/formaContratacao-editar.xhtml
@@ -24,8 +24,8 @@
 				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
 				<p:calendar id="buttonFim" value="#{formaContratacaoManager.formaContratacao.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button"  disabledWeekends="true"/>
 				<br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{formaContratacaoManager.update()}" update="growl" />				
-				<p:button  value="#{message['button.cancelar']}" outcome="pretty:formaContratacao"/>
+				<p:commandButton value="#{message['button.salvar']}" action="#{formaContratacaoManager.update()}" update="growl" styleClass="btn"/>				
+				<p:button  value="#{message['button.cancelar']}" outcome="pretty:formaContratacao" styleClass="btn"/>
 				
 			</p:panel>
 		</h:form>
