--- a/src/main/webapp/pages/perfil/perfil-incluir.xhtml
+++ b/src/main/webapp/pages/perfil/perfil-incluir.xhtml
@@ -19,8 +19,8 @@
 	    		<p:outputLabel for="button" value="#{message['label.data.inicio']}" styleClass="label" />
 	    		<p:calendar id="button" value="#{perfilManager.perfil.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/><br /><br/>
 	    	
-	    		<p:commandButton value="#{message['button.salvar']}" action="#{perfilManager.save()}" update="growl" />
-	    		<p:button value="#{message['button.cancelar']}"  outcome="pretty:perfil"></p:button>
+	    		<p:commandButton value="#{message['button.salvar']}" action="#{perfilManager.save()}" update="growl" styleClass="btn" />
+	    		<p:button value="#{message['button.cancelar']}"  outcome="pretty:perfil" styleClass="btn" />
 	    	</p:panel>
     	</h:form>
     
