--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-editar.xhtml
@@ -29,8 +29,8 @@
         		<p:outputLabel for="calendarioFim" value="#{message['label.data.final']}" styleClass="label"/>
         		<p:calendar id="calendarioFim" value="#{perfilStefaniniManager.perfilStefanini.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button"  disabledWeekends="true"/><br/><br/>
         		
-        		<p:commandButton value="#{message['button.salvar']}" action="#{perfilStefaniniManager.update()}" update="growl" />
-        		<p:button value="#{message['button.cancelar']}" outcome="pretty:perfilStefanini"/>
+        		<p:commandButton value="#{message['button.salvar']}" action="#{perfilStefaniniManager.update()}" update="growl" styleClass="btn"/>
+        		<p:button value="#{message['button.cancelar']}" outcome="pretty:perfilStefanini" styleClass="btn"/>
 			</p:panel>
 		</h:form>
     </ui:define>
