--- a/src/main/webapp/pages/perfilStefanini/perfilStefanini-incluir.xhtml
+++ b/src/main/webapp/pages/perfilStefanini/perfilStefanini-incluir.xhtml
@@ -26,8 +26,8 @@
         		<p:outputLabel for="calendario" value="#{message['label.data.inicio']}" styleClass="label"/>
         		<p:calendar id="calendario" value="#{perfilStefaniniManager.perfilStefanini.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/><br/><br/>
         		
-        		<p:commandButton value="#{message['button.salvar']}" action="#{perfilStefaniniManager.save()}" update="growl" />
-        		<p:button value="#{message['button.cancelar']}" outcome="pretty:perfilStefanini"/>
+        		<p:commandButton value="#{message['button.salvar']}" action="#{perfilStefaniniManager.save()}" update="growl" styleClass="btn"/>
+        		<p:button value="#{message['button.cancelar']}" outcome="pretty:perfilStefanini" styleClass="btn"/>
 			</p:panel>
 		</h:form>
     </ui:define>
