--- a/src/main/webapp/pages/profissional/profissional-incluir.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-incluir.xhtml
@@ -75,8 +75,8 @@
                     <f:selectItems value="#{statusManager.listarAtivos()}" var="status" itemLabel="#{status.nome}" itemValue="#{status}"/>
                 </p:selectOneMenu>
                 <br /><br />
-                <p:commandButton value="#{message['button.salvar']}" action="#{profissionalManager.save()}" update="growl" />
-                <p:button value="#{message['button.cancelar']}" outcome="pretty:profissional"/>
+                <p:commandButton value="#{message['button.salvar']}" action="#{profissionalManager.save()}" update="growl" styleClass="btn"/>
+                <p:button value="#{message['button.cancelar']}" outcome="pretty:profissional" styleClass="btn"/>
             </p:panel>
 		</h:form>
     </ui:define>
