--- a/src/main/webapp/pages/status/status-editar.xhtml
+++ b/src/main/webapp/pages/status/status-editar.xhtml
@@ -23,8 +23,8 @@
 				<p:outputLabel for="buttonFim" value="#{message['label.data.final']}" styleClass="label" />
 				<p:calendar id="buttonFim" value="#{statusManager.status.registroValidadeFim}" pattern="dd/MM/yyyy" mask="true" showOn="button" disabledWeekends="true"/>
 				<br /><br />
-				<p:commandButton value="#{message['button.salvar']}" action="#{statusManager.update()}" update="growl" />				
-				<p:button  value="#{message['button.cancelar']}" outcome="pretty:status"/>				
+				<p:commandButton value="#{message['button.salvar']}" action="#{statusManager.update()}" update="growl" styleClass="btn"/>				
+				<p:button  value="#{message['button.cancelar']}" outcome="pretty:status" styleClass="btn"/>				
 			</p:panel>
 		</h:form>
     </ui:define>
