Mateus - Refatorado label

--- a/src/main/webapp/pages/profissional/profissional-listar.xhtml
+++ b/src/main/webapp/pages/profissional/profissional-listar.xhtml
@@ -56,7 +56,7 @@
 					</h:outputText>			
 				</p:column>
 				
-				<p:column headerText="#{message['label.profissional.formaContratacao']}" sortBy="#{profissional.formaContratacao.nome}">
+				<p:column headerText="#{message['label.profissional.contratacao']}" sortBy="#{profissional.formaContratacao.nome}">
 					<h:outputText value="#{profissional.formaContratacao.nome}"/>			
 				</p:column>
 				
