--- a/src/main/webapp/pages/celula/celula-editar.xhtml
+++ b/src/main/webapp/pages/celula/celula-editar.xhtml
@@ -17,6 +17,9 @@
 				<p:outputLabel for="nome" value="#{message['label.nome']}" styleClass="label" />
 				<p:inputText id="nome" value="#{celulaManager.celula.nome}" required="true" requiredMessage="#{message['span.obrigatorio.Nome']}" />
 				<br /><br />
+				<p:outputLabel for="descricao" value="#{message['label.descricao']}" styleClass="label" />
+				<p:inputText id="descricao" value="#{celulaManager.celula.descricao}" required="true" requiredMessage="#{message['span.obrigatorio.Descricao']}" />
+				<br /><br />
 				<p:outputLabel for="button" value="#{message['label.data.inicio.nova']}" styleClass="label" />
 				<p:calendar id="button" value="#{celulaManager.celula.registroValidadeInicio}" pattern="dd/MM/yyyy" mask="true" showOn="button" required="true" requiredMessage="#{message['span.obrigatorio.dataInicio']}" disabledWeekends="true"/>				
 				<br /><br />
