Mateus - Ajustado Listener Grafico

--- a/src/main/webapp/pages/relatorio/relatorio-profissional-equipe.xhtml
+++ b/src/main/webapp/pages/relatorio/relatorio-profissional-equipe.xhtml
@@ -7,6 +7,7 @@
 	xmlns:pretty="http://ocpsoft.com/prettyfaces">
 
 	<ui:define name="content">
+	<h:form>
 	<p:growl id="growl" life="4000" />
 		<p:breadCrumb>
 		    <p:menuitem value="Home" url="#" />
@@ -43,7 +44,7 @@
 			</p:column>
 			
 		</p:dataTable>
-		
+		</h:form>
 	</ui:define>
 
 </ui:composition>
